# never-again

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
deploy/: Dockerfile  docker-compose.yml  vector_index_templates.sql
deploy/migrations/: 001_initial.sql
never_again/: __init__.py  config.py  engine.py  eval_harness.py
never_again/cli/: main.py
never_again/core/: anonymize.py  context_detector.py  fingerprint.py  models.py  retrieval.py
never_again/embeddings/: base.py  fts.py  local.py  ollama.py
never_again/evals/: README.md  __init__.py  retrieval_cases.json
never_again/mcp/: server.py
never_again/rules/: base.py  verbatim.py
never_again/seed/: loader.py  project_history.py
never_again/server/: app.py
never_again/server/routers/: health.py  log.py  query.py  verify.py
never_again/store/: base.py  http.py  postgres.py  sqlite.py
skill/: SKILL.md
skill/scripts/: session_start_hook.sh
tests/: conftest.py  test_core.py  test_eval_harness.py  test_mcp.py  test_regressions.py  test_seed.py  test_server.py  test_store_floor.py
